@@ -1,3 +1,10 @@
+2008-05-07  Johannes Singler  <singler@ira.uka.de>
+
+       * include/parallel/quicksort.h:
+       (parallel_sort_qs_conquer) Explicitly request number of threads
+       in the parallel clause.
+       (parallel_sort_qs) Remove setting the number of threads globally. 
+
 2008-05-06  Johannes Singler  <singler@ira.uka.de>
 
         * include/parallel/multiway_merge.h:
